# hexlet-django-blog

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: django.yml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  forms.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py  0002_alter_article_created_at_alter_article_text_and_more.py
hexlet_django_blog/article/templates/: articles.html
hexlet_django_blog/templates/: about.html  base.html  index.html
hexlet_django_blog/templates/articles/: article.html  create.html  index.html  update.html
hexlet_django_blog/templates/errors/: 404.html
hexlet_django_blog/templates/includes/: footer.html  nav.html
